styles/widgets/_widget-board.scss
.widget-board {
  flex-grow: 1;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: stretch;
  align-content: stretch;
  border-radius: 10px;
}
.widget-board-column {
  flex-grow: 1;
  flex-basis: 0;
  display: flex;
  flex-direction: column;
  margin: 0 10px;
  margin-bottom: 20px;
  border-radius: 20px;
  padding: 10px 20px;
  background-color: $dark-10;
}

